<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:layout_margin="6sp"
        android:background="@drawable/rectangle_drawable"
        android:padding="2sp"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        android:background="@drawable/rectangle_drawable"
        android:padding="2sp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TableRow>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/txt_basic"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="basicSend"
                android:text="@string/btn_send" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:onClick="basicCancel"
                android:text="@string/btn_cancel" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView3"
                android:layout_margin="4sp"
                android:padding="6sp"
                android:text="@string/txt_max_priority"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Switch
                android:id="@+id/maxPrioritySwitch"
                android:layout_margin="4sp"
                android:layout_span="2"
                android:padding="6sp" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btnBasicPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6sp"
                android:layout_span="3"
                android:onClick="setPreference"
                android:text="@string/btn_basic_preference" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6sp"
        android:background="@drawable/rectangle_drawable"
        android:padding="2sp"
        android:stretchColumns="1,2"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <TableRow>
            <TextView
                android:id="@+id/textView4"
                android:text="@string/txt_progress"
                android:textAlignment="center"
                android:layout_margin="2sp"
                android:padding="4sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="progressSend"
                android:text="@string/btn_send" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2sp"
                android:padding="4sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_bit_picture" />

            <Button
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="bigPictureSend"
                android:text="@string/btn_send" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2sp"
                android:padding="4sp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/txt_bit_text" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="bigTextSend"
                android:text="@string/btn_send" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2sp"
                android:layout_weight="1"
                android:padding="4sp"
                android:text="@string/txt_inbox"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <Button
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="inboxSend"
                android:text="@string/btn_send" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnOtherPreference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setPreference"
                android:text="@string/other_preference" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>